[package]

name = "iron"
version = "0.0.7"
description = "Middleware-Oriented, Concurrency Focused Web Development in Rust."
readme = "README.md"
repository = "https://github.com/iron/iron"
documentation = "http://ironframework.io/doc/iron/"
license = "MIT"
authors = [
    "Jonathan Reem <jonathan.reem@gmail.com>",
    "Zach Pomerantz <zmp@umich.edu>",
    "Patrick Tran <patrick.tran06@gmail.com>"
]

[lib]

name = "iron"
path = "src/lib.rs"

[dependencies]
typemap = "*"
plugin = "*"
modifier = "*"
error = "*"


[dependencies.hyper]
git = "https://github.com/hyperium/hyper.git"

